--- a/filebeat/values.yaml
+++ b/filebeat/values.yaml
@@ -39,6 +39,9 @@ daemonset:
       - type: container
         paths:
           - /var/log/containers/*.log
+        multiline.pattern: '^\{'
+        multiline.negate: true
+        multiline.match: after
         processors:
         - add_kubernetes_metadata:
             host: ${NODE_NAME}
@@ -60,6 +63,7 @@ daemonset:
       output.logstash:
       #   host: '${NODE_NAME}'
         hosts: ['logstash-logstash-headless:5044']
+        
   # Only used when updateStrategy is set to "RollingUpdate"
   maxUnavailable: 1
   nodeSelector: {}
@@ -123,7 +127,10 @@ deployment:
         - type: log
           paths:
             - /usr/share/filebeat/logs/filebeat
-    
+          multiline.pattern: '^\{'
+          multiline.negate: true
+          multiline.match: after
+
       # setup.ilm.rollover_alias: "maxiti"
       # setup.ilm.pattern: "pro"
       # setup.template.name: "pro"
